# LPS

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  layered_publishing_system.md  pyproject.toml
docs/: api.md  branding_communications.md  business_strategy.md  community_governance.md  concept_evolution.md  execution_roadmap.md  findings.md  product_architecture.md  showcase_playbook.md
lps/: __init__.py  cli.py  main.py
lps/api/: __init__.py
lps/api/v1/: __init__.py  router.py
lps/api/v1/endpoints/: __init__.py  auth.py  content.py  layers.py  publications.py  users.py  workflows.py
lps/core/: __init__.py  config.py  logging.py
lps/models/: __init__.py
lps/services/: __init__.py
lps/utils/: __init__.py
scripts/: setup.sh
tests/: conftest.py  test_api.py  test_main.py
